--- a/static/header.html
+++ b/static/header.html
@@ -4,7 +4,10 @@
 <meta charset="UTF-8">
 <title>DNS RESTFul-API</title>
 <link rel="shortcut icon" href="../images/favicon.png">
+<link rel="stylesheet" href="../css/style.css">
 </head>
 <body style="font-family:Arial;">
 <img src="../../images/DA_NRW268x80.png"/>
 <p><a href="../../docs/index.html">home</a></p>
+<!-- processed content follows -->
+
